--- a/index.html
+++ b/index.html
@@ -1,93 +1,91 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Horario de Cursos</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    background: #f0f2f5;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Horario de Cursos</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background: #f0f2f5;
+    }
 
-  h1, h2 {
-    text-align: center;
-  }
+    h1, h2 {
+      text-align: center;
+    }
 
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    background: white;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    margin-bottom: 40px;
-  }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: white;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      margin-bottom: 40px;
+    }
 
-  th, td {
-    border: 1px solid #ccc;
-    padding: 10px;
-    vertical-align: top;
-    min-width: 150px;
-  }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 10px;
+      vertical-align: top;
+      min-width: 150px;
+    }
 
-  th {
-    background-color: #007BFF;
-    color: white;
-  }
+    th {
+      background-color: #007BFF;
+      color: white;
+    }
 
-  .curso {
-    background: #d1ecf1;
-    border: 1px solid #bee5eb;
-    padding: 5px;
-    margin-bottom: 5px;
-    border-radius: 4px;
-    transition: background 0.3s;
-  }
+    .curso {
+      background: #d1ecf1;
+      border: 1px solid #bee5eb;
+      padding: 5px;
+      margin-bottom: 5px;
+      border-radius: 4px;
+      transition: background 0.3s;
+    }
 
-  .aula {
-    font-weight: bold;
-    color: #0c5460;
-  }
+    .aula {
+      font-weight: bold;
+      color: #0c5460;
+    }
 
-  /* Estilo del tablero */
-  .tablero-control {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    gap: 15px;
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 10px;
-  }
+    .tablero-control {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 15px;
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 10px;
+    }
 
-  .card-curso {
-    background-color: #ffffff;
-    border: 2px solid #007BFF;
-    padding: 15px;
-    border-radius: 10px;
-    text-align: center;
-    cursor: pointer;
-    transition: 0.3s ease;
-    box-shadow: 2px 2px 6px rgba(0,0,0,0.1);
-  }
+    .card-curso {
+      background-color: #ffffff;
+      border: 2px solid #007BFF;
+      padding: 15px;
+      border-radius: 10px;
+      text-align: center;
+      cursor: pointer;
+      transition: 0.3s ease;
+      box-shadow: 2px 2px 6px rgba(0,0,0,0.1);
+    }
 
-  .card-curso:hover {
-    background-color: #e6f0ff;
-  }
+    .card-curso:hover {
+      background-color: #e6f0ff;
+    }
 
-  .card-curso.completado {
-    background-color: #d4edda;
-    border-color: #28a745;
-    color: #155724;
-  }
+    .card-curso.completado {
+      background-color: #d4edda;
+      border-color: #28a745;
+      color: #155724;
+    }
 
-  .card-curso span {
-    display: block;
-    margin-top: 5px;
-    font-weight: bold;
-    color: #333;
-  }
-
-</style>
+    .card-curso span {
+      display: block;
+      margin-top: 5px;
+      font-weight: bold;
+      color: #333;
+    }
+  </style>
 </head>
 <body>
 
@@ -140,47 +138,52 @@
 </table>
 
 <h2>Tablero de Control de Cursos</h2>
-<div class="tablero-control" id="tableroCursos">
-  <!-- Aquí se insertan los recuadros dinámicamente -->
-</div>
+<div class="tablero-control" id="tableroCursos"></div>
 
 <script>
   const cursos = [
-    { nombre: "6to A", aula: "15" },
-    { nombre: "7mo A", aula: "16" },
-    { nombre: "6to B", aula: "10" },
-    { nombre: "7mo B", aula: "9" },
-    { nombre: "4to A", aula: "12" },
-    { nombre: "5to A", aula: "7" },
-    { nombre: "4to B", aula: "11" },
-    { nombre: "5to B", aula: "8" },
-    { nombre: "8vo A", aula: "22" },
-    { nombre: "9no A", aula: "28" },
-    { nombre: "8vo B", aula: "18" },
-    { nombre: "9no B", aula: "25" },
-    { nombre: "10mo A", aula: "21" },
-    { nombre: "1ero BGU A", aula: "20" },
-    { nombre: "10mo B", aula: "26" },
-    { nombre: "1ero BGU B", aula: "19" },
-    { nombre: "2do BGU A", aula: "23" },
-    { nombre: "3ero BGU A", aula: "27" },
-    { nombre: "2do BGU B", aula: "17" },
-    { nombre: "3ero BGU B", aula: "24" }
+    { id: "6toA", nombre: "6to A", aula: "15" },
+    { id: "7moA", nombre: "7mo A", aula: "16" },
+    { id: "6toB", nombre: "6to B", aula: "10" },
+    { id: "7moB", nombre: "7mo B", aula: "9" },
+    { id: "4toA", nombre: "4to A", aula: "12" },
+    { id: "5toA", nombre: "5to A", aula: "7" },
+    { id: "4toB", nombre: "4to B", aula: "11" },
+    { id: "5toB", nombre: "5to B", aula: "8" },
+    { id: "8voA", nombre: "8vo A", aula: "22" },
+    { id: "9noA", nombre: "9no A", aula: "28" },
+    { id: "8voB", nombre: "8vo B", aula: "18" },
+    { id: "9noB", nombre: "9no B", aula: "25" },
+    { id: "10moA", nombre: "10mo A", aula: "21" },
+    { id: "1eroA", nombre: "1ero BGU A", aula: "20" },
+    { id: "10moB", nombre: "10mo B", aula: "26" },
+    { id: "1eroB", nombre: "1ero BGU B", aula: "19" },
+    { id: "2doA", nombre: "2do BGU A", aula: "23" },
+    { id: "3eroA", nombre: "3ero BGU A", aula: "27" },
+    { id: "2doB", nombre: "2do BGU B", aula: "17" },
+    { id: "3eroB", nombre: "3ero BGU B", aula: "24" }
   ];
 
   const tablero = document.getElementById("tableroCursos");
 
+  // Cargar estado guardado
+  const estadoGuardado = JSON.parse(localStorage.getItem("estadoCursos")) || {};
+
   cursos.forEach((curso) => {
     const card = document.createElement("div");
     card.className = "card-curso";
-    card.innerHTML = `
-      ${curso.nombre}<br>
-      <span>Aula: ${curso.aula}</span>
-    `;
+    card.innerHTML = `${curso.nombre}<br><span>Aula: ${curso.aula}</span>`;
 
-    // Agregar evento para marcar como completado
+    // Si ya estaba completado, aplicar clase
+    if (estadoGuardado[curso.id]) {
+      card.classList.add("completado");
+    }
+
+    // Evento para marcar/desmarcar y guardar en localStorage
     card.addEventListener("click", () => {
       card.classList.toggle("completado");
+      estadoGuardado[curso.id] = card.classList.contains("completado");
+      localStorage.setItem("estadoCursos", JSON.stringify(estadoGuardado));
     });
 
     tablero.appendChild(card);
